v1.6.0
GD export should not export deleted listings - CHANGED
Edited by author message should not fire when using GD import - CHANGED
get_currentuserinfo() Depreciated and removed/changed - FIXED
Option added to show custom text when no listings found in gd_listings shortcode - CHANGED
Page number variables added for titles & metas description - CHANGED
Forgot Password link not working - FIXED

v1.5.9
New parameter "post_author" added in [gd_listings] shortcode to filter listings by author - ADDED
The slider thumbnails are not working as expected when many listings are displayed - FIXED
Excluded categories printed when selecting a category on add listing page - FIXED
Var GEODIRECTORY_PLUGIN_DIR was not defined if server falls back to PHP sessions - FIXED
Fontawesome star rating colour CSS missing a closing bracket - FIXED
If map shows multiple CPT, clicking current selected CPT shows loading div constantly - FIXED
Quotes in csv title import break maps - FIXED
If domain name contain CPT and home page is set to current location then it breaks the links on listing pages - FIXED
geodir_is_page() fails if post_type query var is an array - FIXED
Features widget add item button does not do anything for new widgets - FIXED
Added option to bounce marker pin on listing hover on listing page - ADDED
Multinews theme compatibility changes for new version - FIXED
Add listing neighbourhood via GD import/export listings - CHANGED
If apostrophe in option value then it disappears from the selected option values - FIXED
Display cpt/category name in the advanced pagination info - CHANGED
Send notification to Admin when listing edited by Author - ADDED
Added new filter for search terms `geodir_search_better_search_terms` - ADDED
Search with single quotes does not return results - FIXED
Tag and Cat labels on details page easier to translate - CHANGED
Options added to check/refresh analytics data and to set time interval for auto refresh results - ADDED