@@ -5,6 +5,7 @@ get_currentuserinfo() Depreciated and removed/changed - FIXED
 Option added to show custom text when no listings found in gd_listings shortcode - CHANGED
 Page number variables added for titles & metas description - CHANGED
 Forgot Password link not working - FIXED
+The category icon and default image uploader no longer working with WP 4.5 - FIXED
 
 v1.5.9
 New parameter "post_author" added in [gd_listings] shortcode to filter listings by author - ADDED
